test/invalid/fc36956_NotAbstractClasses_AbstractMethods/ToalhaDeMesa.plume
/**
 * ToalhaDeMesa.plume
 *
 * Test: Only abstract classes may define abstract methods
 *
 * @author Carlos Mao de Ferro
 * @version $Id: ToalhaDeMesa.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 class ToalhaDeMesa extends Toalha is

	abstract method temNodoas : (estaSuja : Boolean) -> Boolean